/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.google.jetpackcamera.settings";
option java_multiple_files = true;

enum VideoQuality {
  VIDEO_QUALITY_UNSPECIFIED = 0;
  VIDEO_QUALITY_SD = 1;
  VIDEO_QUALITY_HD = 2;
  VIDEO_QUALITY_FHD = 3;
  VIDEO_QUALITY_UHD = 4;
}